<resources>
    <string name="app_name">Spike-Exercise</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginWelcomeTextVal">Welcome Back!</string>

    <!--text string for quick refer-->
    <string name="address">Address</string>
    <string name="hiveName">Hive name</string>
    <string name="hiveInfo">Hive Information</string>
    <string name="resOIns">Result of Inspections</string>
    <string name="health">Health</string>
    <string name="honeyStore">Honey Stores</string>
    <string name="queenProd">Queen Production</string>
    <string name="hiveEquipment">Equipment on the hive</string>
    <string name="invenEquipment">Equipment on inventory</string>
    <string name="losses">Losses</string>
    <string name="gains">Gains</string>
    <string name="save">SAVE</string>
    <string name="regProfilePicDescription">Profile Picture</string>
    <string name="btnRegisterText">SIGN UP</string>
    <string name="regToLoginText">Already had an account?</string>
    <string name="btnRegToLoginText">Sign In</string>
    <string name="regUsernameHint">Username</string>
    <string name="regEmailHint">Email</string>
    <string name="regPasswordHint">Password</string>
    <string name="regAddressHint">Apiary Address</string>
    <string name="regPhoneHint">Phone Number</string>
    <string name="loginWelcomeText">Welcome Back!</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="btnLoginText">SIGN IN</string>
    <string name="loginToRegText">Don\'t have an account?</string>
    <string name="btnLoginToRegText">Sign Up</string>
    <string name="profileName">Name(placeholder)</string>
    <string name="profileAddressLabel">Address</string>
    <string name="profilePhoneLabel">Phone Number</string>
    <string name="profileEmailLabel">Email</string>
    <string name="profileAddress">user address(placeholder)</string>
    <string name="profilePhoneNum">user phone number(placeholder)</string>
    <string name="profileEmailAddr">user email(placeholder)</string>
    <string name="profilePicDescription">profile picture</string>
    <string name="profileMenuEdit">Edit</string>
    <string name="profileMenuLogout">Logout</string>
    <string name="profileMenuBtnDescription">button for menu</string>
    <string name="userProfile">User\'s Profile</string>



</resources>